vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  # mot clé host pour configuration d'une entrée / domaine
  - host: vault.192.168.1.31.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: vault
            port: 
              number: 8200
---
